--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Socket.IO Mouse-connection</title>
+    <title>Socket.IO Mouse-live</title>
     <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
     <style>
       body {
@@ -40,7 +40,7 @@
         padding: 0 10px;
       }
 
-      opacity {
+      .opacity {
         opacity: 0.3;
       }
     </style>
